<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="extraChargeModel"
            type="com.xjek.xuberservice.extracharge.XuperExtraChargeViwModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dash_square"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvXuperAdditionCharge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/avenirltstd_medium"
            android:text="@string/xuper_additional_charge"
            android:textColor="@color/xuber_black"
            android:textSize="@dimen/_13sdp" />


        <TextView
            android:id="@+id/tvXuperLabelDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:fontFamily="@font/avenirltstd_medium"
            android:text="@string/xuper_label_description"
            android:textColor="@color/xuper_light_black"
            android:textSize="@dimen/_11sdp" />


        <TextView
            android:id="@+id/XuperDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:background="@drawable/bg_extra_charge"
            android:fontFamily="@font/avenirltstd_medium"
            android:lineSpacingExtra="3dp"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingTop="@dimen/_15sdp"
            android:paddingRight="@dimen/_10sdp"
            android:paddingBottom="@dimen/_15sdp"
            android:text="A drunk Russian communist warrior. An angry Rogue cursing in Cantonese. An Italian who would sooner shoot people dead with words then with his arrows. An African Ameri..."
            android:textColor="@color/xuber_grey"
            android:textSize="@dimen/_10sdp" />

        <TextView
            android:id="@+id/tvXuperLabelAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:fontFamily="@font/avenirltstd_medium"
            android:text="@string/xuper_label_amount"
            android:textColor="@color/xuper_light_black" />


        <com.xjek.base.utils.PrefixCustomEditText
            android:id="@+id/edtExtraAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:background="@drawable/bg_extra_charge"
            android:maxWidth="@dimen/_120sdp"
            android:textSize="@dimen/_9sdp"
            android:minWidth="@dimen/_90sdp"
            android:inputType="numberDecimal"
            android:paddingTop="@dimen/_5sdp"
            android:paddingBottom="@dimen/_5sdp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@color/xuber_grey" />

        <TextView
            android:id="@+id/tvXuperSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:fontFamily="@font/avenirltstd_medium"
            android:text="@string/submit"
            android:onClick="@{() -> extraChargeModel.submitExtraCharge()}"
            android:textAllCaps="true"
            android:textColor="@color/xuper_blue"
            android:textSize="@dimen/_13sdp" />
    </LinearLayout>

</layout>