<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="uploadImageModel"
            type="com.gox.xuberservice.uploadImage.UploadPictureDialogViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shadow"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_service_state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:fontFamily="@font/avenirltstd_medium"
            android:text="@string/after_service"
            android:textColor="@color/xuper_after_service"
            android:textSize="@dimen/_12sdp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_180sdp"
            android:layout_marginLeft="@dimen/_30sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:background="@drawable/bg_upload_file"
            android:gravity="center"
            android:onClick="@{() -> uploadImageModel.captureImage()}"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llCaptureImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:visibility="visible"
                android:layout_marginTop="@dimen/_50sdp"
                android:layout_marginBottom="@dimen/_50sdp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    app:srcCompat="@drawable/ic_file" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:fontFamily="@font/avenirltstd_medium"
                    android:text="@string/upload_image"
                    android:textColor="@color/xuper_upload_image"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/iv_service_img"
                android:layout_width="match_parent"
                android:contentDescription="@string/app_name"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:src="@drawable/kittty"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_xuper_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:background="@drawable/bg_xuper_submit"
            android:fontFamily="@font/avenirltstd_medium"
            android:gravity="center"
            android:onClick="@{() -> uploadImageModel.submitPicture()}"
            android:paddingTop="@dimen/_12sdp"
            android:paddingBottom="@dimen/_12sdp"
            android:text="@string/submit"
            android:textColor="@color/xuber_white"
            android:textSize="@dimen/_12sdp" />
    </LinearLayout>

</layout>